<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium"
            android:layout_gravity="center_horizontal">

            <!-- Card de Importação -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <Button
                        android:id="@+id/btnImport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_import"
                        app:icon="@drawable/ic_import_24dp"
                        app:iconGravity="textStart"
                        app:iconPadding="@dimen/spacing_small"
                        app:iconSize="@dimen/button_icon_size" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card de Regras de Anonimização -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/textSwitchBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:text="@string/anonymizer_rules"
                        android:layout_marginBottom="@dimen/spacing_small"/>

                    <TextView
                        android:id="@+id/textSwitchBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:textAppearance="?attr/textAppearanceBodyLarge"
                        android:text="@string/anonymizer_rules2" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchMaskUrls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/switch_mask_urls"
                        android:layout_marginBottom="@dimen/spacing_small"/>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchRemoveTimestamps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/switch_remove_timestamps" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:indeterminate="true"
                android:visibility="gone" />

            <!-- Card de Resultado/Preview -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_medium">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPreview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/chat_height"
                        android:layout_marginBottom="@dimen/spacing_small"
                        tools:listitem="@layout/item_chat_message" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnSave"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_tiny"
                            android:layout_weight="1"
                            android:text="@string/btn_save"
                            app:icon="@drawable/ic_save_24dp"
                            app:iconGravity="textStart"
                            app:iconPadding="@dimen/spacing_small"
                            app:iconSize="@dimen/button_icon_size" />

                        <Button
                            android:id="@+id/btnShare"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_tiny"
                            android:layout_weight="1"
                            android:text="@string/btn_share"
                            app:icon="@drawable/ic_share_24dp"
                            app:iconGravity="textStart"
                            app:iconPadding="@dimen/spacing_small"
                            app:iconSize="@dimen/button_icon_size" />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
